# claude-agents

./: .env.example  .gitignore  README.md  pyproject.toml  settings.json.example
.github/workflows/: ci.yml
agents/: README.md  auditor.md  data-collector.md  data-scientist.md  debugger.md  developer.md  doc-writer.md  energy-finance-team.md  frontend-developer.md  gis-analyst.md  investment-asset-team.md  math-reviewer.md  optimization-modeller.md  planner-and-qc-lead.md  refactor-architect.md  reviewer.md  tester.md  visualizer.md  writing-support-team.md
docs/: HANDBOOK.md
scripts/: claude-scaffold.sh  install.sh  sync-to-local.sh
