[project]
name = "project_name"
version = "0.1.0"
description = "Scientific modelling project"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "pint>=0.23",          # units
    "python-dotenv>=1.0",  # .env loading
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
]
notebook = [
    "jupyterlab",
    "matplotlib",
    "seaborn",
]
tracking = [
    "mlflow>=2.14",
    # or: "wandb>=0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project_name"]

# ---- ruff (replaces flake8 + black + isort) ----
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming (allow single-letter math vars via per-file-ignores)
    "UP",        # pyupgrade
    "B",         # bugbear
    "A",         # builtins
    "C4",        # comprehensions
    "SIM",       # simplify
    "RUF",       # ruff-specific
    "NPY",       # numpy
    "PD",        # pandas
]
ignore = [
    "E501",   # line length handled by formatter
    "PD901",  # df is fine as a name in scientific code
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "N806"]  # allow non-snake-case in test fixtures
"src/**/core/*" = ["N803", "N806"]    # allow single-letter math vars (T, x, dt, etc.)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---- mypy ----
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["scipy.*", "pint.*", "matplotlib.*"]
ignore_missing_imports = true

# ---- pytest ----
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--showlocals",
]
markers = [
    "slow: long-running tests (skip with -m 'not slow')",
    "integration: integration tests requiring real data",
    "regression: regression tests against captured baselines",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:numpy.*",
]

# ---- coverage ----
[tool.coverage.run]
source = ["src"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
